--- a/examples/ant-design.css
+++ b/examples/ant-design.css
@@ -1,18 +1,12 @@
 .rc-dialog {
-  position: relative;
-  width: auto;
-  margin: 10px;
+  outline: none;
+  position: absolute;
+  left: -9999px;
+  top: -9999px;
+  z-index: 1000;
 }
-.rc-dialog-wrap {
-  position: fixed;
-  overflow: auto;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: 1050;
-  -webkit-overflow-scrolling: touch;
-  outline: 0;
+.rc-dialog-hidden {
+  display: none;
 }
 .rc-dialog-title {
   margin: 0;
@@ -26,11 +20,11 @@
   border: none;
   border-radius: 6px 6px;
   background-clip: padding-box;
+  outline: 0;
 }
 .rc-dialog-close {
   cursor: pointer;
-  border: 0;
-  background: transparent;
+  outline: none;
   font-size: 21px;
   position: absolute;
   right: 20px;
@@ -44,7 +38,7 @@
   text-decoration: none;
 }
 .rc-dialog-close-x:after {
-  content: '\D7';
+  content: '×';
 }
 .rc-dialog-close:hover {
   opacity: 1;
@@ -148,12 +142,6 @@
             transform: scale(0, 0);
   }
 }
-@media (min-width: 768px) {
-  .rc-dialog {
-    width: 600px;
-    margin: 30px auto;
-  }
-}
 .rc-dialog-mask {
   position: fixed;
   top: 0;
@@ -163,8 +151,8 @@
   background-color: #373737;
   background-color: rgba(55, 55, 55, 0.6);
   height: 100%;
+  z-index: 1000;
   filter: alpha(opacity=50);
-  z-index: 1050;
 }
 .rc-dialog-mask-hidden {
   display: none;
